Add unbound analysis support for copy from statement.